<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- General section -->

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appLogoImageView"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_logo_with_shadow" />

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/color_on_surface_emphasis_high"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appLogoImageView" />

        <TextView
            android:id="@+id/appDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            android:gravity="center"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/color_on_surface_emphasis_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appNameTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contactButton"
            style="@style/Widget.Expenses.TextButton.Normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_large"
            android:text="@string/contact_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appDescriptionTextView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/generalSectionDivider"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:background="@drawable/divider"
            app:backgroundTint="@color/color_on_surface_emphasis_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>