<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?android:colorBackground"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/importExpensesItemLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="@dimen/spacing_xlarge"
            android:paddingTop="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_xlarge"
            android:paddingBottom="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerLayout">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/import_from_excel"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/color_on_surface_emphasis_medium" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/exportExpensesItemLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="@dimen/spacing_xlarge"
            android:paddingTop="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_xlarge"
            android:paddingBottom="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/importExpensesItemLayout">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/export_to_excel"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/color_on_surface_emphasis_medium" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sectionDivider"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@drawable/divider"
            app:backgroundTint="@color/color_on_surface_emphasis_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exportExpensesItemLayout" />

        <LinearLayout
            android:id="@+id/settingsItemLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_xlarge"
            android:paddingTop="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_xlarge"
            android:paddingBottom="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sectionDivider">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_settings_24dp"
                app:tint="@color/color_on_surface_emphasis_medium" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:drawablePadding="@dimen/spacing_normal"
                android:fontFamily="sans-serif-medium"
                android:text="@string/settings"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/color_on_surface_emphasis_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/supportItemLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_xlarge"
            android:paddingTop="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_xlarge"
            android:paddingBottom="@dimen/spacing_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsItemLayout">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_info_24dp"
                app:tint="@color/color_on_surface_emphasis_medium" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:drawablePadding="@dimen/spacing_normal"
                android:fontFamily="sans-serif-medium"
                android:text="@string/about"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/color_on_surface_emphasis_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bannerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_normal"
            app:cardBackgroundColor="?attr/colorSurface"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:contentPaddingBottom="@dimen/spacing_large"
            app:contentPaddingLeft="@dimen/spacing_large"
            app:contentPaddingRight="@dimen/spacing_large"
            app:contentPaddingTop="@dimen/spacing_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bannerTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/color_on_surface_emphasis_high"
                    tools:text="An awesome feature" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bannerSubtitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/color_on_surface_emphasis_medium"
                    tools:text="Available soon" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>